# tax-copilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
tax_copilot/agents/: __init__.py  utils.py
tax_copilot/agents/advisory/: __init__.py  advisory_agent.py  deduction_finder.py  models.py  optimization_agent.py  prompts.py  report_generator.py  tax_calculator.py
tax_copilot/agents/precheck/: __init__.py  completion_evaluator.py  conversation_manager.py  data_organizer.py  prompts.py  questioning_agent.py
tax_copilot/agents/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tax_copilot/agents/storage/: __init__.py  profile_builder.py  session_store.py
tax_copilot/cli/: main.py
tax_copilot/core/: conversation.py  models.py
tax_copilot/report/: render_checklist.py  render_markdown.py
