[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-copilot"
version = "0.0.1"
description = "AI copilot that reviews your tax return like a CPA (does not file taxes)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "tax-copilot contributors"}]
license = {text = "MIT"}
dependencies = [
  "click>=8.1.7",
  "pydantic>=2.6.0",
  "anthropic>=0.18.0",
  "openai>=1.12.0",
  "python-dotenv>=1.0.0",
  "aiofiles>=23.0.0",
]

[project.scripts]
tax-copilot = "tax_copilot.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "black>=24.0.0",
  "ruff>=0.1.0",
]

test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
include = ["tax_copilot*"]
